tests/fixtures/invalid/pow_dict_bool_dict.py
# Cannot call pow() with Dict[str, int], Bool, Dict[str, int]
x = pow({"a": 1}, True, {"a": 1})
